package builder;

public enum ComputerType {
    STUDY,
    GAMING
}
