@startuml
!pragma layout smetana
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true
hide circle

enum ComputerType {
  STUDY
  GAMING
}

class Computer <<Product>> {
  - type: ComputerType
  - processor: String
  - memoryGb: int
  - storageGb: int
  - graphicsCard: String
  - operatingSystem: String
  - peripherals: List<String>
}

interface ComputerBuilder <<Builder>> {
  + processor(value: String): ComputerBuilder
  + memoryGb(value: int): ComputerBuilder
  + storageGb(value: int): ComputerBuilder
  + graphicsCard(value: String): ComputerBuilder
  + operatingSystem(value: String): ComputerBuilder
  + addPeripheral(value: String): ComputerBuilder
  + build(): Computer
}

abstract class AbstractComputerBuilder {
  # validateSpecificConfiguration(): void
  + build(): Computer
}

class StudyComputerBuilder <<ConcreteBuilder>> {
  + StudyComputerBuilder()
}
class GamingComputerBuilder <<ConcreteBuilder>> {
  + GamingComputerBuilder()
  # validateSpecificConfiguration(): void
}
class ComputerDirector <<Director>> {
  + createStudySetup(): Computer
  + createGamingSetup(): Computer
}
class Main <<Client>> {
  {static} + main(args: String[]): void
}

ComputerBuilder <|.. AbstractComputerBuilder : implements
AbstractComputerBuilder <|-- StudyComputerBuilder
AbstractComputerBuilder <|-- GamingComputerBuilder
AbstractComputerBuilder ..> Computer : creates
Computer --> ComputerType
ComputerDirector ..> StudyComputerBuilder
ComputerDirector ..> GamingComputerBuilder
Main ..> ComputerDirector
Main ..> GamingComputerBuilder
@enduml
